Added titles to menu items on homepage

--- a/LocalPizza/Pages/Shared/_Layout.cshtml
+++ b/LocalPizza/Pages/Shared/_Layout.cshtml
@@ -14,7 +14,7 @@
             <div class="flex-container">
                 <a class="brand" href="#">Local Pizza Shop</a>
                 <a class="link" href="#">Order Online</a>
-                <a class="link" href="#">Order Online</a>
+                <a class="link" href="#">Store Details</a>
                 <a class="link" href="#">About Us</a>
 
                 <div class="account-buttons">
