--- a/LocalPizza/Pages/Index.cshtml
+++ b/LocalPizza/Pages/Index.cshtml
@@ -17,11 +17,14 @@
 <div class="flex-container home-box-row">
     <div class="home-box" id="sides-box">
         <h1 class="box-heading">Sides</h1>
+        <a href="#" class="menu-btn">Menu</a>
 </div>
     <div class="home-box" id="drinks-box">
         <h1 class="box-heading">Drinks</h1>
+        <a href="#" class="menu-btn">Menu</a>
     </div>
     <div class="home-box" id="desserts-box">
         <h1 class="box-heading">Desserts</h1>
+        <a href="#" class="menu-btn">Menu</a>
     </div>
 </div>
