--- a/LocalPizza/Pages/Shared/_Layout.cshtml
+++ b/LocalPizza/Pages/Shared/_Layout.cshtml
@@ -12,14 +12,14 @@
     <header>
         <nav>
             <div class="flex-container">
-                <a class="brand" href="#">Local Pizza Shop</a>
+                <a class="brand btn-sml" href="#">Local Pizza Shop</a>
                 <a class="link" href="#">Order Online</a>
                 <a class="link" href="#">Store Details</a>
                 <a class="link" href="#">About Us</a>
 
                 <div class="account-buttons">
-                    <a id="sign-up">Sign up</a>
-                    <a id="sign-in">Sign in</a>
+                    <a id="sign-up" class="btn-sml">Sign up</a>
+                    <a id="sign-in" class="btn-sml">Sign in</a>
                 </div>
             </div>
         </nav>
