--- a/LocalPizza/wwwroot/css/style.css
+++ b/LocalPizza/wwwroot/css/style.css
@@ -141,16 +141,7 @@ footer > hr {
     margin-left: 5.989775vw;
 }
 
-@media only screen and (max-width: 900px) {
-    #desserts-box, #drinks-box, #sides-box {
-        width: 100%;
-    }
 
-    div.flex-container:nth-child(2)
-    {
-        display: block;
-    }
-}
 
 
 #footer-privacy {
@@ -232,12 +223,263 @@ footer > hr {
     background-color: #6565F6;
 }
 
+@media only screen and (max-width: 900px) {
+    #desserts-box, #drinks-box, #sides-box {
+        width: 100%;
+    }
+
+
+    .home-box {
+        box-shadow: 4px 1px 15px #0005;
+    }
+    div.flex-container:nth-child(2) {
+        display: block;
+    }
+
+    .link {
+        font-size: 2.0vw;
+    }
+
+    body {
+        width: 90%;
+    }
+
+    h1 {
+        font-size: 10vw;
+        margin: 0px;
+    }
+
+    footer {
+        margin-top: 59px;
+    }
+
+    header {
+        margin-top: 30px;
+    }
+
+    .btn-sml, .large-button, .menu-btn {
+        padding: 0.5vw 1vw 0.5vw 1vw;
+        border-radius: 1vw;
+        font-size: 2.6vw;
+        margin-top: 0px;
+    }
+
+    .menu-btn {
+        margin-top: 1vw;
+    }
+
+    #sides-box > a:nth-child(2), #desserts-box > a:nth-child(2) {
+        margin-left: 10vw;
+    }
+
+    #drinks-box > a:nth-child(2) {
+        margin-left: 44vw;
+    }
+    .brand {
+        font-size: 2vw;
+        padding: 0.5vw 1vw 0.5vw 1vw;
+    }
+
+    #sign-up {
+        margin-right: 5px;
+    }
+
+    .container {
+        margin-top: 4vw;
+    }
+
+    #phone-number {
+        font-size: 4vw;
+    }
+
+    .fas.fa-phone-alt {
+        margin-right: 24px;
+        font-size: 5vw;
+    }
+
+    .footer-center {
+        max-width: 318px;
+        margin-top: 36px;
+    }
+
+    #sides-box {
+        background-position-x: -20vw;
+        background-size: 300vw 300vw;
+    }
+
+    #sides-box > h1:nth-child(1), #desserts-box > h1:nth-child(1) {
+        margin-left: 10vw;
+    }
+
+    #drinks-box > h1:nth-child(1) {
+        margin-left: 44vw;
+    }
+
+    #footer-privacy {
+        font-size: 2.2vw;
+        margin-top: 15px;
+    }
+
+    #footer-privacy > a:first-child {
+        margin-right: 60px;
+    }
+
+    #copyright-statement {
+        font-size: 2vw;
+    }
+
+    #pizza-box-content > p {
+        display: none;
+        width: 630px;
+        height: 136px;
+        font-size: 1vw;
+        margin: 0px;
+        margin-top: 27px;
+        margin-bottom: 13px;
+    }
+}
+
+
+
 @media only screen and (max-width: 1920px) {
     #pizza-box, #sides-box, #drinks-box, #desserts-box {
         background-size: cover;
         background-repeat: no-repeat;
     }
 }
+
+@media only screen and (max-width: 900px) {
+    #desserts-box, #drinks-box, #sides-box {
+        width: 100%;
+    }
+
+
+    .home-box {
+        box-shadow: 4px 1px 15px #0005;
+    }
+
+    div.flex-container:nth-child(2) {
+        display: block;
+    }
+
+    .link {
+        font-size: 2.0vw;
+    }
+
+    body {
+        width: 90%;
+    }
+
+    h1 {
+        font-size: 10vw;
+        margin: 0px;
+    }
+
+    footer {
+        margin-top: 59px;
+    }
+
+    header {
+        margin-top: 30px;
+    }
+
+    .btn-sml, .large-button, .menu-btn {
+        padding: 0.5vw 1vw 0.5vw 1vw;
+        border-radius: 1vw;
+        font-size: 2.6vw;
+        margin-top: 0px;
+    }
+
+    .menu-btn {
+        margin-top: 1vw;
+    }
+
+    #sides-box > a:nth-child(2), #desserts-box > a:nth-child(2) {
+        margin-left: 10vw;
+    }
+
+    #drinks-box > a:nth-child(2) {
+        margin-left: 44vw;
+    }
+
+    .brand {
+        font-size: 2vw;
+        padding: 0.5vw 1vw 0.5vw 1vw;
+    }
+
+    #sign-up {
+        margin-right: 5px;
+    }
+
+    .container {
+        margin-top: 4vw;
+    }
+
+    #phone-number {
+        font-size: 4vw;
+    }
+
+    .fas.fa-phone-alt {
+        margin-right: 24px;
+        font-size: 5vw;
+    }
+
+    .footer-center {
+        max-width: 65vw;
+        margin-top: 36px;
+    }
+
+    #sides-box {
+        background-position-x: 28vw;
+        background-position-y: -25vw;
+        background-size: 70%;
+    }
+
+    #drinks-box {
+        background-position-x: 10vw;
+        background-position-y: -13vw;
+        background-size: 50%;
+    }
+
+    #desserts-box  {
+        background-position-x: 0vw;
+        background-position-y: -9vw;
+        background-size: 100%;
+    }
+
+        #sides-box > h1:nth-child(1), #desserts-box > h1:nth-child(1) {
+            margin-left: 10vw;
+        }
+
+    #drinks-box > h1:nth-child(1) {
+        margin-left: 44vw;
+    }
+
+    #footer-privacy {
+        font-size: 2.2vw;
+        margin-top: 15px;
+    }
+
+        #footer-privacy > a:first-child {
+            margin-right: 31vw;
+        }
+
+    #copyright-statement {
+        font-size: 2vw;
+    }
+
+    #pizza-box-content > p {
+        display: none;
+        width: 630px;
+        height: 136px;
+        font-size: 1vw;
+        margin: 0px;
+        margin-top: 27px;
+        margin-bottom: 13px;
+    }
+}
+
+
 
 @media screen and (min-width: 1920px) {
     h1 {
