Initial creation of about page

--- a/LocalPizza/Pages/Shared/_Layout.cshtml
+++ b/LocalPizza/Pages/Shared/_Layout.cshtml
@@ -15,7 +15,7 @@
                 <a class="brand btn-sml" href="#">Local Pizza Shop</a>
                 <a class="link" href="#">Order Online</a>
                 <a class="link" href="#">Store Details</a>
-                <a class="link" href="#">About Us</a>
+                <a class="link" asp-page="about">About Us</a>
 
                 <div class="account-buttons">
                     <a id="sign-up" class="btn-sml">Sign up</a>
