added section to layout to allow page specific css

--- a/LocalPizza/Pages/Index.cshtml
+++ b/LocalPizza/Pages/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@page
 @model IndexModel
 @{
-    ViewData["Title"] = "Home page";
+    ViewData["Title"] = "Order Local Pizza Online";
 }
 
 <div id="pizza-box" class="home-box">
