added banner as a section to layout

--- a/LocalPizza/Pages/about.cshtml
+++ b/LocalPizza/Pages/about.cshtml
@@ -3,7 +3,15 @@
     ViewData["Title"] = "about";
 }
 
-<img style="max-width: 100%;"src="~/images/about.jpg"/>
+@section Style {
+    <link rel="stylesheet" href="~/css/AboutUs.css"/>
+}
+
+@section Banner {
+    <img src="~/images/about.jpg" />
+}
+
+
 
 <h2>The Story Of Local Pizza</h2>
 
