--- a/LocalPizza/Pages/Shared/_Layout.cshtml
+++ b/LocalPizza/Pages/Shared/_Layout.cshtml
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="~/css/style.css" />
     <script src="https://kit.fontawesome.com/90cbb1cc30.js" crossorigin="anonymous"></script>
-    @RenderSection("StyleOverride", false);
+    @RenderSection("Style", false)
 </head>
 
 <body>
@@ -24,6 +24,8 @@
             </div>
         </nav>
     </header>
+
+    @RenderSection("Banner", false)
 
     <div class="container">
         <main role="main" class="pb-3">
