--- a/LocalPizza/Pages/about.cshtml
+++ b/LocalPizza/Pages/about.cshtml
@@ -1,6 +1,6 @@
 ﻿@page
 @{
-    ViewData["Title"] = "about";
+    ViewData["Title"] = "About";
 }
 
 @section Style {
@@ -8,10 +8,19 @@
 }
 
 @section Banner {
-    <img src="~/images/about.jpg" />
+    <img id="banner" src="~/images/about.jpg" />
 }
 
 
 
 <h2>The Story Of Local Pizza</h2>
 
+<p>Lorem Ipsum Dolor Sit Amet, Consectetur Adipisicing Elit, Sed Do Eiusmod Tempor Incididunt Ut Labore Et Dolore Magna Aliqua. Ut Enim Ad Minim Veniam, Quiepakis Nostrud Exercitation Ullamco Laboris Nsi Ut Aliquip Ex Ea Comepmodo Consetquat. Duis Aute Irure Dolor In Reprehenderit In Voluptate Velit Esse Cfgillum Dolore Eutpe Fugiat Nulla Pariatur. Excepteur Sint Occaecat Cupidatat Non Proident, Sunt Inpeku Culpa Qui Officia Deserunt Mollit Anim Id Est Laborum.</p>
+
+<img src="~/images/signCrop.jpg"/>
+
+<p>Lorem Ipsum Dolor Sit Amet, Consectetur Adipisicing Elit, Sed Do Eiusmod Tempor Incididunt Ut Labore Et Dolore Magna Aliqua. Ut Enim Ad Minim Veniam, Quiepakis Nostrud Exercitation Ullamco Laboris Nsi Ut Aliquip Ex Ea Comepmodo Consetquat. Duis Aute Irure Dolor In Reprehenderit In Voluptate Velit Esse</p>
+
+<div class="card-portrait">
+    <img src="~/images/portrait1.png"/>
+</div>
