Added index navigation to layout shared

--- a/LocalPizza/Pages/Shared/_Layout.cshtml
+++ b/LocalPizza/Pages/Shared/_Layout.cshtml
@@ -12,7 +12,7 @@
     <header>
         <nav>
             <div class="flex-container">
-                <a class="brand btn-sml" href="#">Local Pizza Shop</a>
+                <a class="brand btn-sml" asp-page="Index">Local Pizza Shop</a>
                 <a class="link" href="#">Order Online</a>
                 <a class="link" href="#">Store Details</a>
                 <a class="link" asp-page="about">About Us</a>
