Completed all levels of store page

--- a/LocalPizza/Pages/Shared/_Layout.cshtml
+++ b/LocalPizza/Pages/Shared/_Layout.cshtml
@@ -14,7 +14,7 @@
             <div class="flex-container">
                 <a class="brand btn-sml" asp-page="Index">Local Pizza Shop</a>
                 <a class="link" href="#">Order Online</a>
-                <a class="link" href="#">Store Details</a>
+                <a class="link" asp-page="StoreDetails">Store Details</a>
                 <a class="link" asp-page="about">About Us</a>
 
                 <div class="account-buttons">
