Added Vue.js to the edit Product cshml

--- a/LocalPizza/Pages/Admin/AddProduct.cshtml
+++ b/LocalPizza/Pages/Admin/AddProduct.cshtml
@@ -14,5 +14,8 @@
 
     <label asp-for="Item.Range"></label>
     <select asp-for="Item.Range" asp-items="Model.Range"></select>
+
+    <label asp-for="Item.Price"></label>
+    <input asp-for="Item.Price" />
     <button type="submit">Save</button>
 </form>
