--- a/LocalPizza/Pages/Admin/ProductList.cshtml
+++ b/LocalPizza/Pages/Admin/ProductList.cshtml
@@ -16,34 +16,18 @@
             <th>Edit</th>
             <th>Delete</th>
         </tr>
-
-        <tr class="tableContent">
-            <td>PlaceHolder</td>
-            <td>BBQ MeatLovers</td>
-            <td>Premium</td>
-            <td>$21.95</td>
-            <td>324</td>
-            <td><i class="fas fa-edit"></i></td>
-            <td><i class="fas fa-trash-alt"></i></td>
-        </tr>
-        <tr class="tableContent">
-            <td>PlaceHolder</td>
-            <td>BBQ MeatLovers</td>
-            <td>Premium</td>
-            <td>$21.95</td>
-            <td>324</td>
-            <td><i class="fas fa-edit"></i></td>
-            <td><i class="fas fa-trash-alt"></i></td>
-        </tr>
-        <tr class="tableContent">
-            <td>PlaceHolder</td>
-            <td>BBQ MeatLovers</td>
-            <td>Premium</td>
-            <td>$21.95</td>
-            <td>324</td>
-            <td><i class="fas fa-edit"></i></td>
-            <td><i class="fas fa-trash-alt"></i></td>
-        </tr>
+        @foreach (var item in Model.Products)
+        {
+            <tr class="tableContent">
+                <td><img class="Product-Image" src="~/images/@item.ProductPicture"/></td>
+                <td>@item.Name</td>
+                <td>@item.Range</td>
+                <td>$@item.Price</td>
+                <td>324</td>
+                <td><a asp-page="./EditProduct" asp-route-id="@item.Id"><i class="fas fa-edit"></i></a></td>
+                <td><a asp-page="./Delete" asp-route-id="@item.Id"><i class="fas fa-trash-alt"></i></a></td>
+            </tr>
+        }
     </table>
 </div>
 <div class="large-button">
