--- a/LocalPizza/Pages/Admin/EditProduct.cshtml
+++ b/LocalPizza/Pages/Admin/EditProduct.cshtml
@@ -3,3 +3,40 @@
 @{
     Layout = "~/Pages/Shared/_AdminLayout.cshtml";
 }
+<div>
+    <form method="post" enctype="multipart/form-data">
+        <input type="hidden" asp-for="Item.Id" />
+
+        <label asp-for="Item.Name"></label>
+        <input asp-for="Item.Name"/>
+
+        <label asp-for="Item.Price"></label>
+        <input asp-for="Item.Price"/>
+
+        <label asp-for="Item.Range"></label>
+        <select asp-for="Item.Range" asp-items="Model.Range"></select>
+
+        <label asp-for="Item.Description"></label>
+        <input asp-for="Item.Description"/>
+
+        <label asp-for="Image"></label>
+        <input asp-for="Image" />
+
+        <button type="submit">Save</button>
+    </form>
+
+    <div id="editPage">
+    </div>
+
+
+    <script src="~/js/editProduct/main.js"></script>
+
+    <script>
+        const mountedApp = app.mount('#editPage');
+        const item = {
+            Name: '@Model.Item.Name',
+            Price: '@Model.Item.Price',
+            Description: '@Model.Item.Description'
+        }
+    </script>
+</div>
