--- a/LocalPizza/Pages/Menu.cshtml
+++ b/LocalPizza/Pages/Menu.cshtml
@@ -6,7 +6,7 @@
 
 <h1>Menu</h1>
 
-@foreach (var Menu in Model.Menus)
+@*@foreach (var Menu in Model.Menus)
 {
     <h1>@Menu.Name</h1>
     @foreach (var Group in Menu.ItemGroups)
@@ -19,4 +19,4 @@
             <h4>@item.Price.ToString()</h4>
         }
     }
-}
+}*@
