--- a/LocalPizza/Pages/Shared/_Layout.cshtml
+++ b/LocalPizza/Pages/Shared/_Layout.cshtml
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="~/css/style.css" />
     <script src="https://kit.fontawesome.com/90cbb1cc30.js" crossorigin="anonymous"></script>
+    <script src="https://unpkg.com/vue@next"></script>
     @RenderSection("Style", false)
 </head>
 
