Items have a viewmodel in hte menu

--- a/LocalPizza/wwwroot/css/style.css
+++ b/LocalPizza/wwwroot/css/style.css
@@ -86,7 +86,7 @@ div.flex-container:nth-child(2) {
 #customiseForm {
     position: fixed;
     width: 200px;
-    height: 200px;
+    min-height: 200px;
     background-color: #666;
 }
 
