Added classes and order form to handle orders and addresses.

--- a/LocalPizza/Pages/order.cshtml
+++ b/LocalPizza/Pages/order.cshtml
@@ -2,3 +2,28 @@
 @model LocalPizza.Pages.orderModel
 @{
 }
+<form method="post">
+    <label asp-for="CurrentOrder.DeliveryAddress.Unit"></label>
+    <input asp-for="CurrentOrder.DeliveryAddress.Unit" />
+
+    <label asp-for="CurrentOrder.DeliveryAddress.StreetNumber" ></label>
+    <input asp-for="CurrentOrder.DeliveryAddress.StreetNumber" />
+
+    <label asp-for="CurrentOrder.DeliveryAddress.StreetName" ></label>
+    <input asp-for="CurrentOrder.DeliveryAddress.StreetName" />
+
+    <label asp-for="CurrentOrder.DeliveryAddress.Suburb" ></label>
+    <input asp-for="CurrentOrder.DeliveryAddress.Suburb" />
+
+    <label asp-for="CurrentOrder.DeliveryAddress.PostCode" ></label>
+    <input asp-for="CurrentOrder.DeliveryAddress.PostCode" />
+
+    <label asp-for="CurrentOrder.Name" ></label>
+    <input asp-for="CurrentOrder.Name" />
+
+    <label asp-for="CurrentOrder.RequestDelivery" ></label>
+    <input asp-for="CurrentOrder.RequestDelivery"  asp-format="{0:dd/MM/yyyy HH:mm}"/>
+
+
+    <button type="submit">Submit</button>
+</form>
