Implemenitng time selection in order

--- a/LocalPizza/Pages/order.cshtml
+++ b/LocalPizza/Pages/order.cshtml
@@ -22,8 +22,6 @@
     <input asp-for="CurrentOrder.Name" />
 
     <label asp-for="CurrentOrder.RequestDelivery" ></label>
-    <input asp-for="CurrentOrder.RequestDelivery"  asp-format="{0:dd/MM/yyyy HH:mm}"/>
-
-
+    <select asp-for="CurrentOrder.RequestDelivery"
     <button type="submit">Submit</button>
 </form>
