--- a/LocalPizza/Pages/order.cshtml
+++ b/LocalPizza/Pages/order.cshtml
@@ -1,8 +1,8 @@
 ﻿@page
-@model LocalPizza.Pages.orderModel
+@model LocalPizza.Pages.OrderModel
 @{
 }
-<form method="post">
+<form id="OrderForm" onsubmit="appendCart()" method="post">
     <label asp-for="CurrentOrder.DeliveryAddress.Unit"></label>
     <input asp-for="CurrentOrder.DeliveryAddress.Unit" />
     <br />
@@ -24,8 +24,25 @@
     <label asp-for="CurrentOrder.Name"></label>
     <input asp-for="CurrentOrder.Name" />
     <br />
-    <label asp-for="CurrentOrder.RequestDelivery"></label>
+    <label asp-for="CurrentOrder.Name"></label>
     <select asp-for="CurrentOrder.RequestDelivery" asp-items="Model.TimesSelect"></select>
     <br />
-    <button type="submit">Submit</button>
+    <button type="button" onclick="appendCart()">Submit</button>
 </form>
+
+<script>
+    function appendCart() {
+        let fe = document.getElementById('OrderForm')
+        let form = new FormData(fe);
+        form.append("OrderItems", JSON.parse(localStorage.getItem('cart')));
+        form.append("TestMessage", "Hello there!");
+        console.log(JSON.parse(localStorage.getItem('cart')));
+        fetch('/order', {
+            method: 'POST',
+            body: form
+        }).
+            then(response => {
+                console.log(response.status);
+            })
+    }
+</script>
