Migrated database to the new order model

--- a/LocalPizza/Pages/order.cshtml
+++ b/LocalPizza/Pages/order.cshtml
@@ -24,17 +24,40 @@
     <label asp-for="CurrentOrder.Name"></label>
     <input asp-for="CurrentOrder.Name" />
     <br />
-    <label asp-for="CurrentOrder.Name"></label>
+    <label asp-for="CurrentOrder.PhoneNumber"></label>
+    <input asp-for="CurrentOrder.PhoneNumber" />
+    <br />
+    <label asp-for="CurrentOrder.RequestDelivery"></label>
     <select asp-for="CurrentOrder.RequestDelivery" asp-items="Model.TimesSelect"></select>
     <br />
-    <button type="button" onclick="appendCart()" >Submit</button>
+    <button type="button" onclick="appendCart()">Submit</button>
 </form>
 
 <script>
     function appendCart() {
+
+        let order = {
+            DeliveryAddress: {
+                Unit : document.getElementById('CurrentOrder_DeliveryAddress_Unit').value,
+                StreetNumber : document.getElementById('CurrentOrder_DeliveryAddress_StreetNumber').value,
+                StreetName : document.getElementById('CurrentOrder_DeliveryAddress_StreetName').value,
+                Suburb : document.getElementById('CurrentOrder_DeliveryAddress_Suburb').value,
+                PostCode: document.getElementById('CurrentOrder_DeliveryAddress_PostCode').value,
+            },
+            PhoneNumber : document.getElementById('CurrentOrder_PhoneNumber').value,
+            Name : document.getElementById('CurrentOrder_Name').value,
+            DeliveryInstructions : document.getElementById('CurrentOrder_DeliveryInstructions').value,
+            RequestDelivery: document.getElementById('CurrentOrder_RequestDelivery').value,
+            OrderItems: JSON.parse(localStorage.getItem('cart'))
+
+        };
+        console.log(order.RequestDelivery);
         fetch("/api/Order", {
             method: "POST",
-            body: localStorage.getItem('cart')
+            headers: {
+                "Content-Type":"application/json"
+            },
+            body: JSON.stringify(order)
         })
 
     }
