Order gets created in the database and the relationships work correctly.

--- a/LocalPizza/Pages/order.cshtml
+++ b/LocalPizza/Pages/order.cshtml
@@ -33,32 +33,4 @@
     <button type="button" onclick="appendCart()">Submit</button>
 </form>
 
-<script>
-    function appendCart() {
-
-        let order = {
-            DeliveryAddress: {
-                Unit : document.getElementById('CurrentOrder_DeliveryAddress_Unit').value,
-                StreetNumber : document.getElementById('CurrentOrder_DeliveryAddress_StreetNumber').value,
-                StreetName : document.getElementById('CurrentOrder_DeliveryAddress_StreetName').value,
-                Suburb : document.getElementById('CurrentOrder_DeliveryAddress_Suburb').value,
-                PostCode: document.getElementById('CurrentOrder_DeliveryAddress_PostCode').value,
-            },
-            PhoneNumber : document.getElementById('CurrentOrder_PhoneNumber').value,
-            Name : document.getElementById('CurrentOrder_Name').value,
-            DeliveryInstructions : document.getElementById('CurrentOrder_DeliveryInstructions').value,
-            RequestDelivery: document.getElementById('CurrentOrder_RequestDelivery').value,
-            OrderItems: JSON.parse(localStorage.getItem('cart'))
-
-        };
-        console.log(order.RequestDelivery);
-        fetch("/api/Order", {
-            method: "POST",
-            headers: {
-                "Content-Type":"application/json"
-            },
-            body: JSON.stringify(order)
-        })
-
-    }
-</script>
+<script src="~/js/Order/fetch.js"></script>
