--- a/LocalPizza/Pages/Complete.cshtml
+++ b/LocalPizza/Pages/Complete.cshtml
@@ -9,5 +9,5 @@
 <div id="app">
 
 </div>
-
+<script src="~/js/signalr/dist/browser/signalr.js"></script>
 <script src="~/js/OrderComplete/main.js"></script>
