Orders page now updates live

--- a/LocalPizza/Pages/Admin/Orders.cshtml
+++ b/LocalPizza/Pages/Admin/Orders.cshtml
@@ -4,3 +4,9 @@
     Layout = "~/Pages/Shared/_AdminLayout.cshtml";
 }
 <h1>Orders</h1>
+<div id="app">
+
+</div>
+
+<script src="~/js/signalr/dist/browser/signalr.js"></script>
+<script src="~/js/AdminOrders/main.js"></script>
