--- a/LocalPizza/Pages/Shared/_Layout.cshtml
+++ b/LocalPizza/Pages/Shared/_Layout.cshtml
@@ -7,6 +7,7 @@
     <script src="https://kit.fontawesome.com/90cbb1cc30.js" crossorigin="anonymous"></script>
     <script src="https://unpkg.com/vue@next"></script>
     @RenderSection("Style", false)
+    @RenderSection("Scripts", false)
 </head>
 
 <body>
