--- a/LocalPizza/Pages/Menu.cshtml
+++ b/LocalPizza/Pages/Menu.cshtml
@@ -4,6 +4,10 @@
     ViewData["Title"] = "Menu";
 }
 @using LocalPizza.Core
+
+@section Style {
+    <link rel="stylesheet" href="~/css/Menu.css" />
+}
 <h2>Menu</h2>
 <div id="menu">
 
