Project data now included

--- a/LocalPizza/wwwroot/css/Menu.css
+++ b/LocalPizza/wwwroot/css/Menu.css
@@ -23,6 +23,7 @@ div.flexContainer {
     height: 206px;
     color: white;
     margin-right: 50px;
+    margin-bottom: 120px;
     background-color: slategray;
 }
 
